--- a/Apps/Playground/CMakeLists.txt
+++ b/Apps/Playground/CMakeLists.txt
@@ -175,6 +175,11 @@ if(APPLE)
             XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC YES
             RESOURCE "${RESOURCE_FILES}"
             FOLDER "Playground")
+        # The NSDocumentRevisionsDebugMode argument is typically added automatically by Xcode when running a macOS application in debug mode.
+        # This argument enables additional debugging features related to document revisions.
+        if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+            add_definitions(-DNSDocumentRevisionsDebugMode=0)
+        endif()
     endif()
     set_property(TARGET Playground PROPERTY UNITY_BUILD false)
 endif()
