--- a/.github/jobs/android.yml
+++ b/.github/jobs/android.yml
@@ -15,6 +15,12 @@ jobs:
       parameters:
         vmImage: ${{ parameters.vmImage }}
 
+    - task: JavaToolInstaller@0
+      inputs:
+        versionSpec: '17'
+        jdkArchitectureOption: 'x64'
+        jdkSourceOption: 'PreInstalled'
+
     - task: Gradle@2
       inputs:
           workingDirectory: 'Apps/Playground/Android'
