gradle version update (#1347)
Should fix a bunch of issues that start appearing with newer Android
Studio

![image](https://github.com/BabylonJS/BabylonNative/assets/1312968/463208b3-88aa-4cb4-8d08-8db09001b409)

and
```
Unable to make field private final java.lang.String java.io.File.path accessible: module java.base does not "opens java.io" to unnamed module
```

--- a/Apps/Playground/Android/app/build.gradle
+++ b/Apps/Playground/Android/app/build.gradle
@@ -73,11 +73,13 @@ android {
             path 'CMakeLists.txt'
         }
     }
-
     packagingOptions {
-        pickFirst 'lib/*/libv8android.so'
-        pickFirst 'lib/*/libjsc.so'
+        jniLibs {
+            pickFirsts += ['lib/*/libv8android.so', 'lib/*/libjsc.so']
+        }
     }
+
+    namespace 'com.android.babylonnative.playground'
 }
 
 dependencies {
@@ -105,8 +107,8 @@ task extractNativeLibraries() {
     }
 }
 
-tasks.whenTaskAdded { task ->
-    if (task.name.contains("external") && !task.name.contains("Clean")) {
+tasks.configureEach { task ->
+    if ((task.name.contains("buildCMake") || task.name.contains("configureCMake")) && !task.name.contains("Clean")) {
         task.dependsOn(extractNativeLibraries)
     }
 }
