- Update to latest JsRuntimeHost with lots of fixes. - Update a few validation tests to not use render count. - Update scripts to use `const`/`let` instead of `var`. - Update validation script to handle some errors better and clean up dead code. - Add unhandled exception handler to Playground app so that validation test will report correct errors and exit correctly. - Change core graphics device implemenation to update bgfx state right before requesting screenshots. This will ensure the screenshot is the right size if the resolution has changed. - Fix TestUtils:WritePNG to return an error when the byte length is an unexpected size instead of silently failing. - Change TestUtils::SetTtitle to update the HWND title on a background thread to avoid dead lock with the main thread.

--- a/Plugins/NativeCapture/CMakeLists.txt
+++ b/Plugins/NativeCapture/CMakeLists.txt
@@ -10,8 +10,7 @@ target_include_directories(NativeCapture PUBLIC
 
 target_link_libraries(NativeCapture
     PUBLIC JsRuntimeInternal
-    PRIVATE GraphicsDeviceContext
-    PRIVATE napi_extensions)
+    PRIVATE GraphicsDeviceContext)
 
 set_property(TARGET NativeCapture PROPERTY FOLDER Plugins)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
