--- a/Apps/Playground/Scripts/config.json
+++ b/Apps/Playground/Scripts/config.json
@@ -27,10 +27,8 @@
         },
         {
             "title": "GLTF ClearCoat",
-            "playgroundId": "#YG3BBF#4",
-            "referenceImage": "glTFClearCoat.png",
-            "renderCount": 50,
-            "excludeFromAutomaticTesting": false
+            "playgroundId": "#YG3BBF#33",
+            "referenceImage": "glTFClearCoat.png"
         },
         {
             "title": "Iridescence GLTF",
@@ -255,27 +253,26 @@
         },
         {
             "title": "Scissor test",
-            "renderCount": 10,
-            "playgroundId": "#W7E7CF#12",
+            "playgroundId": "#W7E7CF#34",
+            "excludedEngines": [ "D3D12" ],
             "referenceImage": "scissor-test.png",
-            "excludedGraphicsApis": [ "D3D12" ],
-            "comment": "TODO: reenable D3D12 when automatica mip-maps issue is fixed in bgfx"
+            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx"
         },
         {
             "title": "Scissor test with 0.9 hardware scaling",
-            "renderCount": 10,
-            "playgroundId": "#W7E7CF#27",
-            "referenceImage": "scissorTestWith0.9HardwareScaling.png",
-            "excludedGraphicsApis": [ "D3D12" ],
-            "comment": "TODO: reenable D3D12 when automatica mip-maps issue is fixed in bgfx"
+            "playgroundId": "#W7E7CF#34",
+            "replace": "//options//, hardwareScalingLevel = 0.9;",
+            "excludedEngines": [ "D3D12" ],
+            "referenceImage": "scissor-test-2.png",
+            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx"
         },
         {
             "title": "Scissor test with 1.5 hardware scaling",
-            "renderCount": 10,
-            "playgroundId": "#W7E7CF#28",
-            "referenceImage": "scissorTestWith1.5HardwareScaling.png",
-            "excludedGraphicsApis": [ "D3D12" ],
-            "comment": "TODO: reenable D3D12 when automatica mip-maps issue is fixed in bgfx"
+            "playgroundId": "#W7E7CF#34",
+            "replace": "//options//, hardwareScalingLevel = 1.5;",
+            "excludedEngines": [ "D3D12" ],
+            "referenceImage": "scissor-test-3.png",
+            "comment": "TODO: reenable D3D12 when automatic mip-maps issue is fixed in bgfx"
         },
         {
             "title": "Scissor test with negative x and y",
