Support iOS17+ and macOS14+ (#1249)
- Add job with xcode15/ios17
- `AVCaptureVideoOrientation` is deprecated in newer targets. Replaced
with an enum when targeting iOS17+ or macOS14+.

Fixes #1248

---------

Co-authored-by: Gary Hsu <bghgary@users.noreply.github.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,13 @@ jobs:
       xCodeVersion: 14.2
       deploymentTarget: 16.2
 
+  - template: .github/jobs/ios.yml
+    parameters:
+      name: iOS_Xcode15_iOS17
+      vmImage: 'macOS-13'
+      xCodeVersion: 15.0
+      deploymentTarget: 17.0
+
 # WIN32
   - template: .github/jobs/win32.yml
     parameters:
