--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -31,6 +31,10 @@ jobs:
         cmake .. -G Ninja -D JAVASCRIPTCORE_LIBRARY=/usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.0.so -D NAPI_JAVASCRIPT_ENGINE=${{ parameters.JSEngine }} -D CMAKE_BUILD_TYPE=RelWithDebInfo -D BX_CONFIG_DEBUG=ON -D CMAKE_UNITY_BUILD=$(UNITY_BUILD)
         ninja
       displayName: 'Build X11'
+
+    - script: |
+        cmake --build build --target INSTALL --config RelWithDebInfo
+      displayName: 'Install'
     
 #    - script: |
 #        export DISPLAY=:99
