--- a/.github/jobs/ios.yml
+++ b/.github/jobs/ios.yml
@@ -35,6 +35,6 @@ jobs:
       displayName: 'Build Playground iOS'
 
     - script: |
-        cmake --build buildiOS --target INSTALL --config RelWithDebInfo
+        cmake --install buildiOS --prefix="./install"
       displayName: 'Install'
 
