no unittest for ios

--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -42,6 +42,15 @@ jobs:
         configuration: RelWithDebInfo
       displayName: 'Build UnitTests macOS'
 
+    - task: Xcode@5
+      inputs:
+        xcWorkspacePath: 'buildmacOS/BabylonNative.xcodeproj'
+        scheme: 'install'
+        sdk: 'macosx'
+        useXcpretty: false
+        configuration: Release
+      displayName: 'Build Installation content macOS'
+
     - script: |
         cmake --install buildmacOS --prefix="./install"
       displayName: 'Install'
