installation build before PG

--- a/.github/jobs/ios.yml
+++ b/.github/jobs/ios.yml
@@ -25,15 +25,7 @@ jobs:
         cmake .. -G Xcode -D IOS=ON -D DEPLOYMENT_TARGET=${{ parameters.deploymentTarget }} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD)
       displayName: 'Generate iOS solution'
 
-    - task: Xcode@5
-      inputs:
-        xcWorkspacePath: 'buildiOS/BabylonNative.xcodeproj'
-        scheme: 'Playground'
-        sdk: 'iphoneos'
-        useXcpretty: false
-        configuration: RelWithDebInfo
-      displayName: 'Build Playground iOS'
-
+    # build installation/release before so Derived Data is empty. 
     - task: Xcode@5
       inputs:
         xcWorkspacePath: 'buildiOS/BabylonNative.xcodeproj'
@@ -42,6 +34,15 @@ jobs:
         useXcpretty: false
         configuration: Release
       displayName: 'Build Installation content iOS'
+
+    - task: Xcode@5
+      inputs:
+        xcWorkspacePath: 'buildiOS/BabylonNative.xcodeproj'
+        scheme: 'Playground'
+        sdk: 'iphoneos'
+        useXcpretty: false
+        configuration: RelWithDebInfo
+      displayName: 'Build Playground iOS'
 
     - script: |
         cmake --install buildiOS --prefix="./install"
